[gd_scene load_steps=9 format=2]

[ext_resource path="res://Inimigo.gd" type="Script" id=1]
[ext_resource path="res://After The End Placeholder Assets/Characters/character_0004.png" type="Texture" id=2]
[ext_resource path="res://After The End Placeholder Assets/Characters/character_0005.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "Mover",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Parado",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 12.25 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 12.5, 13.5 )

[sub_resource type="CircleShape2D" id=8]
radius = 111.0

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 20, 12.25 )

[node name="Inimigo" type="KinematicBody2D" groups=["Inimigo", "Saved"]]
position = Vector2( 230, 5 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "Parado"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.25 )
shape = SubResource( 6 )

[node name="AreaInimigoAtaque" type="Area2D" parent="."]
position = Vector2( 0, 2 )

[node name="InimigoColisao" type="CollisionShape2D" parent="AreaInimigoAtaque"]
position = Vector2( -2.5, -2.5 )
shape = SubResource( 7 )

[node name="AreadeDeteccao" type="Area2D" parent="."]
visible = false
position = Vector2( 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreadeDeteccao"]
shape = SubResource( 8 )

[node name="AreaAtivarAtaque" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaAtivarAtaque"]
position = Vector2( -2, 0.25 )
shape = SubResource( 9 )

[connection signal="body_entered" from="AreaInimigoAtaque" to="." method="_on_AreaInimigoAtaque_body_entered"]
[connection signal="body_entered" from="AreadeDeteccao" to="." method="_on_AreadeDeteccao_body_entered"]
[connection signal="body_exited" from="AreadeDeteccao" to="." method="_on_AreadeDeteccao_body_exited"]
[connection signal="body_entered" from="AreaAtivarAtaque" to="." method="_on_AreaAtivarAtaque_body_entered"]
